# entrega-mlops

./: .env.example  .gitignore  Dockerfile  README.md  memoria_urbanplan.md  pyproject.toml  setup_bigquery.py
.github/workflows/: ci.yml
dossiers_generados/: dossier_edificio_residencial_torre_valencia_20260609_1714.md
notebooks/: indexacion_normativa.ipynb
src/urbanplan/: __init__.py  agent.py
src/urbanplan/agents/: estimador.py  normativo.py
src/urbanplan/mcp_server/: dossier_tool.py  server.py
src/urbanplan/retrieval/: bigquery.py
src/urbanplan/supervisor/: supervisor.py
urbanplan-ai/: main.py  pyproject.toml
